--- a/index.html
+++ b/index.html
@@ -1,1 +1,191 @@
-Carli
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="./styles.css">
+  <title>Portfolio</title>
+</head>
+
+<body>
+
+  <header class="homepage">
+    <div class="bg">
+      <div class="logo">
+        <h4>C.</h4>
+        <h4>ROSENBAUM</h4>
+      </div>
+      <div class="container">
+        <div class="heading">
+
+          <h1>Web Design</h1>
+          <h2>& developer</h2>
+
+        </div>
+
+      </div>
+    </div>
+  </header>
+
+
+
+  <main>
+
+    <div class="container">
+      <div class="welcome">
+        <div class="intro">
+          <h2>About</h2>
+          <h2>myself</h2>
+          <p>I am currently an Interactive Media Design student. I have an extensive background in UX, HTML, CSS,
+            Javascript, CMS
+            and pretty much anything Adobe related. I enjoy coding as well as creating dynamic content. Check out some
+            of my projects </p>
+
+        </div>
+
+        <img src="./imgs/code.jpg" alt="code">
+      </div>
+    </div>
+
+
+    <div class="container">
+      <div class="projects relative">
+        <div class="work">
+          <h2>work &</h2>
+          <h2>projects</h2>
+        </div>
+        <div id="gallery" class="gallery">
+          <div class="box modal size">
+            <img src="./imgs/menu1.jpg" alt="bowling website">
+            <div class="overlay">
+              <div class="text">
+                <h3>EB's Catering</h3>
+                <p>Menu I created for EB's Catering Company</p>
+              </div>
+            </div>
+          </div>
+          <div class="box modal">
+            <a href="http://estevanbowl.ca/" target="_blank">
+              <img src="./imgs/bowling.jpg" alt="bowling website">
+
+              <div class="overlay">
+                <div class="text">
+                  <h3>Estevan Bowls Website</h3>
+                  <p>Website I designed and coded for Estevan Bowl</p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="box modal size">
+            <img src="./imgs/portfolio.jpg" alt="bowling website">
+            <div class="overlay">
+              <div class="text">
+                <h3>Elements Fitness</h3>
+                <p>Exterior of a pamphlet I created</p>
+              </div>
+            </div>
+          </div>
+          <div class="box modal size">
+            <img src="./imgs/portfolio-in.jpg" alt="bowling website">
+            <div class="overlay">
+              <div class="text">
+                <h3>Elements Fitness</h3>
+                <p>Interior of the pamphlet</p>
+              </div>
+            </div>
+          </div>
+          <div class="box modal">
+            <img src="./imgs/glowbowling1.5.jpg" alt="bowling website">
+            <div class="overlay">
+              <div class="text">
+                <h3>Digital Graphics</h3>
+                <p>Digital content I designed</p>
+              </div>
+            </div>
+          </div>
+          <div class="box modal">
+            <img src="./imgs/entryway1.jpg" alt="bowling website">
+            <div class="overlay">
+              <div class="text">
+                <h3>Entry Way Sign</h3>
+                <p>Sign I designed for Estevan Bowl</p>
+              </div>
+            </div>
+          </div>
+          <div class="box modal lg">
+            <img src="./imgs/home.jpg" alt="bowling website">
+            <div class="overlay">
+              <div class="text">
+                <h3>Sample Website</h3>
+                <p>Website I designed for UX class</p>
+              </div>
+            </div>
+          </div>
+          <div class="box modal size">
+            <img src="./imgs/itunes.jpg" alt="penguin">
+            <div class="overlay">
+              <div class="text">
+                <h3>Sample Artwork</h3>
+                <p>Penguin I created for Digital Graphics class</p>
+              </div>
+            </div>
+          </div>
+          <div class="box modal wide">
+            <img src="./imgs/masking-unit.jpg" alt="penguin">
+            <div class="overlay">
+              <div class="text">
+                <h3>Masking Unit</h3>
+                <p>Background I created for Estevan Bowl</p>
+              </div>
+            </div>
+          </div>
+          <div class="box modal">
+            <img src="./imgs/apps.jpg" alt="penguin">
+            <div class="overlay">
+              <div class="text">
+                <h3>App Design</h3>
+                <p>Sample app re-design</p>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+
+
+
+
+
+  </main>
+  <footer>
+    <div class="container">
+      <div class="footer">
+        <h4>C.</h4>
+        <h4>ROSENBAUM</h4>
+        <p>get in touch</p>
+        <p>email: rose0243@algonquinlive.com</p>
+
+        <a href="https://www.linkedin.com/in/carli-rosenbaum-04a6228b/" target="_blank"> <img src="./imgs/link.png  "
+            alt="linkedin logo"></a>
+      </div>
+    </div>
+  </footer>
+
+
+  <script>
+    const $gallery = document.getElementById('gallery')
+
+    $gallery.addEventListener('click', function (event) {
+      const $card = event.target.closest('.modal')
+      if ($card) {
+        $card.classList.toggle('big')
+      }
+    })
+  </script>
+</body>
+
+</html>
